<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014-2018 The MoKee Open Source Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <mokee.preference.MKSystemSettingSwitchPreference
        android:key="receive_push_notifications"
        android:summary="@string/mokee_news_summary"
        android:title="@string/mokee_news_title"
        android:defaultValue="true" />

    <PreferenceCategory android:title="@string/mokee_links">

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_website_summary"
            android:title="@string/mokee_website_title"
            app:url="http://www.mokeedev.com" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_forum_summary"
            android:title="@string/mokee_forum_title"
            app:url="http://bbs.mokeedev.com" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_issues_summary"
            android:title="@string/mokee_issues_title"
            app:url="http://issues.mokeedev.com" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_changelog_summary"
            android:title="@string/mokee_changelog_title"
            app:url="http://changelog.mokeedev.com" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_github_summary"
            android:title="@string/mokee_github_title"
            app:url="https://github.com/MoKee" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_translate_summary"
            android:title="@string/mokee_translate_title"
            app:url="http://translate.mokeedev.com" />

        <com.mokee.center.widget.LinkPreference
            android:summary="@string/mokee_wiki_summary"
            android:title="@string/mokee_wiki_title"
            app:url="http://wiki.mokeedev.com" />

    </PreferenceCategory>

</PreferenceScreen>
